2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.0.rc2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 3.1.0.rc1 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.1.0.rc1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* omp/omp.h, omp/xml.c, omp/xml.h: Format according to coding style.
	Command was 'indent --no-tabs --ignore-newlines -l 80 *.c *.h'.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/settings.c, base/openvas_string.c, base/drop_privileges.h,
	base/credentials.h, base/nvticache.c, base/settings.h,
	base/openvas_string.h, base/nvticache.h, base/openvas_file.c,
	base/accessrules.c, base/openvas_certificate_file.c, base/pidfile.c,
	base/array.c, base/openvas_file.h, base/severity_filter.c,
	base/nvti.c, base/accessrules.h, base/openvas_certificate_file.h,
	base/certificate.c, base/array.h, base/severity_filter.h, base/nvti.h,
	base/hash_table_util.c, base/certificate.h, base/hash_table_util.h,
	base/drop_privileges.c, base/credentials.c: Format according to coding
	style. Command was 'indent --no-tabs --ignore-newlines -l 80 *.c *.h'.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/strutils.h, nasl/capture_packet.h, nasl/nasl_http.h,
	nasl/nasl_tcp.h, nasl/nasl_wmi.c, nasl/config.h, nasl/nasl_tree.c,
	nasl/nasl_signature.c, nasl/nasl_crypto2.c, nasl/nasl_tree.h,
	nasl/preparse.c, nasl/nasl_signature.h, nasl/nasl_crypto2.h,
	nasl/preparse.h, nasl/nasl_host.c, nasl/nasl_crypto.c,
	nasl/nasl_host.h, nasl/nasl_crypto.h, nasl/nasl_debug.c,
	nasl/nasl_socket.c, nasl/nasl_func.c, nasl/nasl_debug.h,
	nasl/nasl_socket.h, nasl/nasl_func.h, nasl/nasl_packet_forgery.c,
	nasl/nasl_text_utils.c, nasl/nasl_scanner_glue.c, nasl/exec.c,